[project]
name = "ontology-tools"
version = "0.1.0"
description = "Representations of ontology system for medical imaging informatics."
readme = "README.md"
authors = [
    { name = "Tarik Alkasab", email = "tarik@alkasab.org" },
    { name = "Maya Caskey", email = "mayaicaskey@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "case-switcher>=1.3.13",
    "motor>=3.7.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
